# Minority_Aware_LLM_Unlearning

./: LICENSE  readme.md  setup.cfg
configs/fine-tune/: finetune.yml
configs/mia/: mia.yml
configs/unlearn/: unlearn.yml
dataset/: dataset_echr_year.py  dataset_enron_email.py  dataset_enron_phone.py
examples/: evaluation.py  finte_tune.py
src/pii_leakage/: global_configs.py
src/pii_leakage/arguments/: attack_args.py  config_args.py  dataset_args.py  env_args.py  mia_attack_args.py  min_k_args.py  model_args.py  ner_args.py  outdir_args.py  privacy_args.py  trainer_args.py
src/pii_leakage/attacks/: attack_factory.py  privacy_attack.py
src/pii_leakage/attacks/extraction/: naive_extraction.py
src/pii_leakage/attacks/inference/: perpexity_inference.py
src/pii_leakage/attacks/reconstruction/: perplexity_reconstruction.py
src/pii_leakage/dataset/: dataset.py  dataset_factory.py  generated_dataset.py  real_dataset.py
src/pii_leakage/mia_attacks/: base.py  loss.py  mia_attack_factory.py  min_k.py  zlib.py
src/pii_leakage/models/: gpt2.py  language_model.py  llama2.py  model_factory.py
src/pii_leakage/ner/: fill_masks.py  flair_tagger.py  pii_results.py  tagger.py  tagger_factory.py
src/pii_leakage/unlearning_methods/: ascent_plus_descent.py  gradient_ascent.py  labeled_dataset.py  random_label.py  scrub.py
src/pii_leakage/utils/: callbacks.py  output.py  python_helper.py  random.py  set_ops.py  web.py
