[metadata]
    name        = pii-leakage
    version     = 0.1.0
    description = LLMs PII Privacy Leakage
    license     = MIT License

[options]
package_dir=
    =src
packages=find:
install_requires = 
    torch>=1.10,<2.0
    transformers
    tqdm
    flair @ git+https://github.com/flairNLP/flair
    dp_transformers @ git+https://github.com/microsoft/dp-transformers.git@main#egg=dp_transformers
    opacus

[options.packages.find]
where=src
